# DSA-Python

17-deep_learning/: hello.py  pyproject.toml  teste.ipynb  teste.py
